--- a/styleIndex.css
+++ b/styleIndex.css
@@ -108,16 +108,6 @@ navigation :hover{
     text-shadow: 2px 2px 5px rgb(250, 80, 108); 
 }
 
-.footer-index{
-    background-color: white;
-    display: flex;
-    justify-content: space-around;
-    height: 36px;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
-}
-
 .footer{
     background-color: white;
     display: flex;
@@ -136,3 +126,10 @@ navigation :hover{
 footer :hover{
     color: darkred;
 }
+
+@media (max-width: 600px) {
+    nav, article {
+      width: 100%;
+      height: auto;
+    }
+  }
